<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tkl_activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_perfil"/>
        <Button
            android:id="@+id/btn_calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_calendario" />
        <Button
            android:id="@+id/btn_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_top" />
        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_buscar" />
    </LinearLayout>

</RelativeLayout>