<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginTop="100dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_usuario"
        android:id="@+id/tv_usuario"
        android:layout_below="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_nombre"
        android:id="@+id/tv_nombre"
        android:layout_below="@+id/tv_usuario"
        android:layout_alignLeft="@+id/tv_usuario"
        android:layout_alignStart="@+id/tv_usuario" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/perfil"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_apellido"
        android:id="@+id/tv_apellido"
        android:layout_below="@+id/tv_nombre"
        android:layout_alignLeft="@+id/tv_nombre"
        android:layout_alignStart="@+id/tv_nombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_dni"
        android:id="@+id/tv_dni"
        android:layout_below="@+id/tv_apellido"
        android:layout_alignLeft="@+id/tv_apellido"
        android:layout_alignStart="@+id/tv_apellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/show_usuario"
        android:layout_above="@+id/tv_nombre"
        android:layout_alignLeft="@+id/show_apellido"
        android:layout_alignStart="@+id/show_apellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/show_nombre"
        android:layout_above="@+id/show_apellido"
        android:layout_alignLeft="@+id/show_apellido"
        android:layout_alignStart="@+id/show_apellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/show_apellido"
        android:layout_above="@+id/show_dni"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/show_dni"
        android:layout_below="@+id/tv_apellido"
        android:layout_alignLeft="@+id/show_apellido"
        android:layout_alignStart="@+id/show_apellido" />
</RelativeLayout>